--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
     "langchain-ollama>=0.3.2",
+    "langgraph>=0.4.3",
+    "transformers>=4.51.3",
 ]
