--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
     "langchain-ollama>=0.3.2",
+    "langgraph-checkpoint-sqlite>=2.0.7",
     "langgraph>=0.4.3",
+    "tavily-python>=0.7.2",
     "transformers>=4.51.3",
 ]
